# Pixels_Dice_RO

./: .gitignore  README.md  app.py  browser_extension_chrome.crx  main.py  pyproject.toml  requirements.txt  test.py
app/: app.py
browser_extension_chrome/: background.js  content.js  manifest.json  popup.html
chrome_extension/: backgroud.js  background.js  content.js  manifest.json  popup.html  popup.js  readme.md  temp.js
config/: config_example.yaml  die_raw_data.yaml  example_config.yaml
extras/: build.py
extras_extra/: build.py
extras_extra/old_stuff/: app.py
modules/: average_rolls.py  connect_dice.py  mongodb_atlas.py  shared_state.py  sound_effects.py  system_tray.py  web_socket.py
settings/: config_example.yaml
