[tool.poetry]
name = "app-template"
version = "0.1.8"
description = "Personal starting application structure."
authors = ["nightpanda2810 <nightpanda2810@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandalibs = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
