[tool.poetry]
name = "pixels-dice-ro"
version = "0.1.0"
description = "Pixels dice read only connection."
authors = ["nightpanda2810 <nightpanda2810@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandalibs = "^0.1.3"
asyncio = "^3.4.3"
nat20 = "^0.1.0"
asgiref = "^3.8.1"
pymongo = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
