[tool.poetry]
name = "pixels-dice-ro"
version = "0.1.1"
description = "Pixels dice read only connection."
authors = ["nightpanda2810 <nightpanda2810@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
asgiref = "^3.8.1"
pymongo = "^4.7.1"
websockets = "^12.0"
bleak = "^0.20"
motor = "^3.4.0"
pandalibs = "^0.1.3"
pystray = "^0.19.5"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
